fixing overflow problems

--- a/discord/discord.css
+++ b/discord/discord.css
@@ -94,10 +94,6 @@ body {
     font-size: 40px;
 }
 
-.text > hr {
-    border: 1px solid #1e2124;
-}
-
 .input {
     display: grid;
     padding: 2rem;
